--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CHANGE ME</title>
+    <title>Bowling at the highschool level</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
-      
+      <nav>
+        <h1>Bowling at the highschool level</h1>
+        <ul id="nav-ul">
+          <li class="nav-li">
+            <a href="index.html">home</a>
+          </li>
+          <li class="nav-li">
+            <a href="portfolio.html">Portfolio</a>
+          </li>
+        </ul>
+      </nav>
+      <main>
+        <div class="sidebar">
+          <img class="sidebar-img" src="images/lethal venom bowling ball.jpg"
+        </div>
+        <div class="content">
+          <h2>Colston Blanchard</h2>
+          <p>Student at Hahnville High School</p>
+          <div id="interests"> 
+            <h3>Interests</h3>
+            <ul>
+              <li>Bowling</li>
+              <li>Sleeping</li>
+              <li>Gaming</li>
+            </ul>
+          </div>
+        </div>
+      </main>
     </div>
   </body>
 </html>
