--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       </nav>
       <main>
         <div class="sidebar">
-          <img class="sidebar-img" src="images/lethal venom bowling ball.jpg"
+          <img class="sidebar-img" src="images/lethal venom bowling ball.jpg" />
         </div>
         <div class="content">
           <h2>Colston Blanchard</h2>
           <p>Student at Hahnville High School</p>
-          <div id="interests"> 
+          <div id="interests">
             <h3>Interests</h3>
             <ul>
               <li>Bowling</li>
