--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bowling at the highschool level</title>
+    <title>Bowling at the High School Level</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -9,10 +9,10 @@
     <!-- All content goes here -->
     <div id="all-contents">
       <nav>
-        <h1>Bowling at the highschool level</h1>
+        <h1>Bowling at the High School Level</h1>
         <ul id="nav-ul">
           <li class="nav-li">
-            <a href="index.html">home</a>
+            <a href="index.html">Home</a>
           </li>
           <li class="nav-li">
             <a href="portfolio.html">Portfolio</a>
