--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Bowling at the High School Level</title>
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
     <!-- All content goes here -->
@@ -22,7 +23,15 @@
             <div class="content">
                 <h1>Portfolio</h1>
                 <ul id="portfolio">
-
+                    <li>
+                        <a href="fsd-projects/platformer/">Platformer: A cannon-dodging adventure game for Halleb0t</a>
+                    </li>
+                    <li>
+                        <a href="fsd-projects/bouncing-box/">Bouncing Box: A fun introduction to web game development</a>
+                    </li>
+                    <li>
+                        <a href="fsd-projects/circularity/">Circularity: A poetic motion experiment with circles</a>
+                    </li>
                 </ul>
             </div>
         </main>
