--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -69,7 +69,9 @@
         //////////////////////////////////////////////////////////////////
 
         // TODO 2 - Variable declarations
-
+      var positionX =  0
+      var points = 0 
+      var speed = 10
 
 
 
@@ -79,7 +81,13 @@
          * Each time it is called, it should move the Box to a new location.
          * If the box drifts off the screen, turn it around!
          */
-        function update() {
+        function update() {moveBoxTo(positionX += speed)
+          if (positionX > boardWidth){
+            speed = speed * -1
+          }
+          if (positionX < 0){
+            speed = speed * -1
+          }
 
         
 
@@ -94,6 +102,9 @@
          * - move the box to the left side of the screen.
          */
         function handleBoxClick() {
+          positionX = 0
+          changeBoxText(points += 1)
+          speed = 3 * points + 10
 
 
 
